--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-index.html
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <div>
+
+      <p>Hello World!</p>
+      <<p>How are you?</p>
+
+    </div>
+
+  </body>
+</html>
